syntax = "proto3";
package api;

import "custom_option/custom_option.proto";

service MusicSheetService {
  rpc GetV1(MusicSheetServiceGetV1Request) returns (MusicSheetServiceGetV1Response) {
    option (custom_option.method_option) = {
      method_error_definitions: [
        {
          code: METHOD_RESOURCE_NOT_FOUND
          severity: ERROR_SEVERITY_WARNING
          message: "The music sheet does not exist."
        }
      ]
    };
  }
  rpc CreateV1(MusicSheetServiceCreateV1Request) returns (MusicSheetServiceCreateV1Response) {
    option (custom_option.method_option) = {
      method_error_definitions: [
        {
          code: METHOD_ILLEGAL_ARGUMENT
          severity: ERROR_SEVERITY_WARNING
          message: "The title length must be between 1 and 100."
        }
      ]
    };
  }
}

message MusicSheetServiceGetV1Request {
  string music_sheet_id = 1;
}

message MusicSheetServiceGetV1Response {
  MusicSheet music_sheet = 1;
}

message MusicSheetServiceCreateV1Request {
  string title = 1;
  repeated Note notes = 2;
}

message MusicSheetServiceCreateV1Response {
  string music_sheet_id = 1;
}

// 楽譜を表します。
message MusicSheet {
  string music_sheet_id = 1;
  string title = 2;
  repeated Note notes = 3;
}

// 音符を表します。
// ここでは 16 分音符のみを扱います。
message Note {
  repeated Pitch pitches = 1;
}

// 音階を表します。
enum Pitch {
  PITCH_UNSPECIFIED = 0;
  PITCH_C3 = 1;
  PITCH_D3 = 2;
  PITCH_E3 = 3;
  PITCH_F3 = 4;
  PITCH_G3 = 5;
  PITCH_A4 = 6;
  PITCH_B4 = 7;
  PITCH_C4 = 8;
}
